--- a/www/index.html
+++ b/www/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css"></link>
-    <title>Game of Life Rust WASM</title>
-  </head>
-  <body>
-    <div class="container">
-      <canvas id="game-of-life-canvas"></canvas>
-      <div class="side">
-        <input type="range" id="speed" min="1" max="30" value="15">
-        <p>FPS: <spad id="fps"></spad></p>
-        <button id="toggle">Start</button>
-      </div>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  </link>
+  <title>Game of Life Rust WASM</title>
+</head>
+
+<body>
+  <div class="container">
+    <canvas id="game-of-life-canvas"></canvas>
+    <div class="side">
+      <div id="fps-count"></div>
+      <input type="range" id="speed" min="1" max="20" value="10">
+      <p>FPS: <spad id="fps"></spad>
+      </p>
+      <button id="toggle">Start</button>
     </div>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="./bootstrap.js"></script>
-  </body>
+  </div>
+  <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+  <script src="./bootstrap.js"></script>
+</body>
+
 </html>
