--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,17 @@
       <input type="range" id="speed" min="1" max="20" value="10">
       <p>FPS: <spad id="fps"></spad>
       </p>
-      <button id="toggle">Start</button>
+      <div class="buttons">
+        <button id="toggle">Start</button>
+        <button id="reset">Reset</button>
+      </div>
+      <form id="preset">
+        <p>Select starting preset</p>
+        <input type="radio" name="preset_val" value="0">Random
+        <input type="radio" name="preset_val" value="1">Single Glider
+        <input type="radio" name="preset_val" value="2">Glider Gun
+        <input type="radio" name="preset_val" value="3">Empty
+      </form>
     </div>
   </div>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
