--- a/index.html
+++ b/index.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="./styles/main.css">
-  </link>
-  <title>Game of Life Rust WASM</title>
-</head>
-
-<body>
-  <div class="container">
-    <canvas id="game-of-life-canvas"></canvas>
-    <div class="side">
-      <div id="fps-count"></div>
-      <input type="range" id="speed" min="1" max="20" value="10">
-      <p>FPS: <spad id="fps"></spad>
-      </p>
-      <div class="buttons">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css"></link>
+    <title>Game of Life Rust WASM</title>
+  </head>
+  <body>
+    <div class="container">
+      <canvas id="game-of-life-canvas"></canvas>
+      <div class="side">
+        <input type="range" id="speed" min="1" max="30" value="15">
+        <p>FPS: <spad id="fps"></spad></p>
         <button id="toggle">Start</button>
-        <button id="reset">Reset</button>
       </div>
-      <form id="preset">
-        <p>Select starting preset</p>
-        <input type="radio" name="preset_val" value="0">Random
-        <input type="radio" name="preset_val" value="1">Single Glider
-        <input type="radio" name="preset_val" value="2">Glider Gun
-        <input type="radio" name="preset_val" value="3">Empty
-      </form>
     </div>
-  </div>
-  <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-  <script src="./bootstrap.js"></script>
-</body>
-
+    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <script src="./bootstrap.js"></script>
+  </body>
 </html>
