added select button instead of using reset for selection

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
         <input type="radio" name="preset_val" value="2">Glider Gun
         <input type="radio" name="preset_val" value="3">Empty
       </form>
+      <button id="preset_select">Select</button>
     </div>
   </div>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
